--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,64 +2,70 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Kranthi K. R. Bannuru
     - name: Date of Birth
-      value: 14th March 1879
+      value: 16 July, 1989
     - name: Languages
-      value: English, German
+      value: English, Hindi, Telugu, Tamil, Kannada, German
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
+      institution: Singapore University of Technology and Design, Singapore
+      year: 2022
+#       description:
+#         - Description 1.
+#         - Description 2.
+#         - title: Description 3.
+#           contents:
+#             - Sub-description 1.
+#             - Sub-description 2.
+    - title: MSc
+      institution: Technical University of Munich & National University of Singapore
+      year: 2014
+#       description:
+#         - Description 1.
+#         - Description 2.
+
+    - title: BTech
+      institution: Indian Institute of Technology Guwahati, India
+      year: 2011
+#       description:
+#         - Description 1.
+#         - Description 2.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Doctoral Researcher
+      institution: Singapore University of Technology and Design, Singapore
+      year: 2016 - current1955
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
+          - Developed 3D piezoelectric sensors and conductive composite structures via a custom-built electroprinting process for low viscous inks.
+          - Garnered expertise in state-of-art analytical equipment and data analysis to characterize materials' thermal, mechanical, chemical, and structural properties.
+          - Pursued biodesign, IP law, business valuation workshops to enable scientific understanding in a broader industrial context.
+
+#         - Description 1.
+#         - Description 2.
+#         - title: Description 3.
+#           contents:
+#             - Sub-description 1.
+#             - Sub-description 2.
+ 
+    - title: Senior Research Assistant
+      institution: Singapore University of Technology and Design, Singapore
+      year: Feb 2022 - Jun 2022
       description:
-        - Description 1.
-        - Description 2.
+          - Led the experimental design and execution to develop magnetic 3D parts via FDM to meet industry partner's product specifications.
+          - Optimized the process for high throughput extrusion (~ 30 m) of smooth, printable filament with magnetic fillers.
+          - Communicated with a team of professors, managers and scientists to document project progress and achieve project deliverables on time.
 
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
+    - title: Master Thesis Researcher, 
+      institution: SGL Carbon GmbH, Germany
+      year: Oct 2013 - Jun 2014
       description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
+          - Designed a capacity balance model for Li-ion batteries with Si/C/graphite anodes to mitigate the electrochemical performance difference b/w half-cell & full-cell modes.
 
 - title: Open Source Projects
   type: time_table
@@ -71,25 +77,52 @@
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2018
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - Student service award, Singapore University of Technology and Design
+#         - Nobel Prize in Physics 
+#         - Matteucci Medal
+    - year: 2016
       items: 
-        - Max Planck Medal
+        - President's graduate fellowship for SUTD PhD program
+    - year: 2012
+      items: 
+        - Industrial scholarship fully sponsored by BASF (Germany) for masters
+        
+    - year: 2007
+      items: 
+        - Merit scholarship for academic excellence at IIT Guwahati
 
-- title: Academic Interests
-  type: nested_list
+- title: Positions
+  type: time_table
   contents:
-    - title: Topic 1.
+    - year: 2017 - 2018
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
+        - Events director & mentor, Graduate Student Association of SUTD
+    - year: 2017
+      items: 
+        - Delegate, University Scholars Leadership Symposium, Humanitarian affairs UK at the United Nations centre in Thailand
+    - year: 2015 - 2016
+      items: 
+        - Education outreach, content developer and teaching pre-university students in India
+    - year: 2014
+      items: 
+        - Global Internship Program with AIESEC - a global NGO fostering youth leadership
+    - year: 2010
+      items: 
+        - Organizing member, Team Alcheringa - annual cultural festival of IIT Guwahati
+        
+# - title: Academic Interests
+#   type: nested_list
+#   contents:
+#     - title: Topic 1.
+#       items: 
+#         - Description 1.
+#         - Description 2.
+#     - title: Topic 2.
+#       items:
+#         - Description 1.
+#         - Description 2.
 
 - title: Other Interests
   type: list
